<resources>
    <string name="app_name">NY Times Search</string>
    <string name="action_settings">Settings</string>
    <string name="enter_search_query">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="title_result">Title</string>
    <string name="title_activity_article">Articles</string>
    <string name="search_parameters_label">Change your Search Parameters</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="save">Save</string>
    <string name="none">None</string>
    <string name="filter_news_desk">News categories to display</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="begin_date">Begin Date</string>
    <string name="sports">Sports</string>
    <string name="choose_date">Choose Date</string>
    <string name="news_desk">News Desk</string>
    <string name="title_activity_settings">Settings</string>
</resources>
